# aoc-test

./: .gitignore  README.md  pyproject.toml  setup.py
src/aoc_test/: aoct  main.py
